--- a/package.json
+++ b/package.json
@@ -10,61 +10,61 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.12",
-    "@hookform/resolvers": "^3.3.4",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-date-pickers": "^7.13.0",
-    "@prisma/client": "^5.7.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@tanstack/react-table": "^8.20.1",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "lucide-react": "^0.429.0",
+    "@auth/prisma-adapter": "1.0.12",
+    "@hookform/resolvers": "3.3.4",
+    "@mui/styled-engine-sc": "6.0.0-alpha.18",
+    "@mui/x-date-pickers": "7.13.0",
+    "@prisma/client": "5.7.1",
+    "@radix-ui/react-aspect-ratio": "1.1.0",
+    "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-scroll-area": "1.1.0",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-switch": "1.0.3",
+    "@tanstack/react-table": "8.20.1",
+    "bcrypt": "5.1.1",
+    "bcryptjs": "2.4.3",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "cmdk": "1.0.0",
+    "date-fns": "3.6.0",
+    "lucide-react": "0.429.0",
     "next": "14.0.4",
-    "next-auth": "^5.0.0-beta.4",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-calendar": "^5.0.0",
-    "react-day-picker": "^9.0.8",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-icons": "^4.12.0",
-    "react-spinners": "^0.13.8",
-    "resend": "^2.1.0",
-    "sonner": "^1.3.1",
-    "styled-components": "^6.1.12",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "next-auth": "5.0.0-beta.4",
+    "next-themes": "0.2.1",
+    "react": "18",
+    "react-calendar": "5.0.0",
+    "react-day-picker": "9.0.8",
+    "react-dom": "18",
+    "react-hook-form": "7.49.2",
+    "react-icons": "4.12.0",
+    "react-spinners": "0.13.8",
+    "resend": "2.1.0",
+    "sonner": "1.3.1",
+    "styled-components": "6.1.12",
+    "tailwind-merge": "2.2.0",
+    "tailwindcss-animate": "1.0.7",
+    "uuid": "9.0.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.7",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/bcrypt": "5.0.2",
+    "@types/bcryptjs": "2.4.6",
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "@types/uuid": "9.0.7",
+    "autoprefixer": "10.0.1",
+    "eslint": "8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "prisma": "^5.7.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "8",
+    "prisma": "5.7.1",
+    "tailwindcss": "3.3.0",
+    "typescript": "5"
   }
 }
