--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-scroll-area": "1.1.0",
     "@radix-ui/react-select": "2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-table": "8.20.1",
@@ -34,14 +34,14 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "1.0.0",
-    "date-fns": "3.6.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "0.429.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "0.2.1",
     "react": "18",
     "react-calendar": "5.0.0",
-    "react-day-picker": "9.0.8",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18",
     "react-hook-form": "7.49.2",
     "react-icons": "4.12.0",
