--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "2.1.0",
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.5.4",
     "lucide-react": "0.429.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
