--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-table": "8.20.1",
+    "@types/jspdf": "^2.0.0",
     "bcrypt": "5.1.1",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
@@ -36,6 +37,8 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "lucide-react": "0.429.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
