--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "0.2.1",
+    "nookies": "^2.5.2",
     "react": "18",
     "react-calendar": "5.0.0",
     "react-day-picker": "^8.10.1",
