--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-date-pickers": "7.13.0",
     "@prisma/client": "5.7.1",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
@@ -25,28 +25,29 @@
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-scroll-area": "1.1.0",
     "@radix-ui/react-select": "2.0.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.0.3",
-    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toast": "1.2.1",
     "@tanstack/react-table": "8.20.1",
-    "@types/jspdf": "^2.0.0",
+    "@types/jspdf": "2.0.0",
+    "@vercel/blob": "0.24.0",
     "bcrypt": "5.1.1",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "1.0.0",
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.5.4",
-    "jspdf": "^2.5.2",
-    "jspdf-autotable": "^3.8.3",
+    "date-fns": "3.6.0",
+    "framer-motion": "11.5.4",
+    "jspdf": "2.5.2",
+    "jspdf-autotable": "3.8.3",
     "lucide-react": "0.429.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "0.2.1",
-    "nookies": "^2.5.2",
+    "nookies": "2.5.2",
     "react": "18",
     "react-calendar": "5.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "18",
     "react-hook-form": "7.49.2",
     "react-icons": "4.12.0",
