--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,6 +18,7 @@
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
     "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-icons": "1.3.0",
@@ -25,6 +26,7 @@
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-scroll-area": "1.1.0",
     "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "1.2.1",
