--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.12",
@@ -75,6 +76,7 @@
     "postcss": "8",
     "prisma": "5.7.1",
     "tailwindcss": "3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "5"
   }
 }
