--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.0.3",
     "@radix-ui/react-toast": "1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "8.20.1",
     "@types/jspdf": "2.0.0",
     "@vercel/blob": "0.24.0",
