--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "8",
     "prisma": "5.7.1",
+    "prisma-dbml-generator": "^0.12.0",
     "tailwindcss": "3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "5"
