--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.0.3",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "1.2.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-table": "8.20.1",
@@ -45,7 +46,7 @@
     "framer-motion": "11.5.4",
     "jspdf": "2.5.2",
     "jspdf-autotable": "3.8.3",
-    "lucide-react": "0.429.0",
+    "lucide-react": "^0.429.0",
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "0.2.1",
@@ -57,6 +58,7 @@
     "react-hook-form": "7.49.2",
     "react-icons": "4.12.0",
     "react-spinners": "0.13.8",
+    "recharts": "^2.13.0",
     "resend": "2.1.0",
     "sonner": "1.3.1",
     "styled-components": "6.1.12",
