--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "0.2.1",
+    "nodemailer": "^6.9.16",
     "nookies": "2.5.2",
     "react": "18",
     "react-calendar": "5.0.0",
@@ -71,6 +72,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "18",
     "@types/react-dom": "18",
     "@types/uuid": "9.0.7",
