--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -56,6 +56,7 @@
     "react-calendar": "5.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "18",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "7.49.2",
     "react-icons": "4.12.0",
     "react-spinners": "0.13.8",
